main.tf
resource "aws_s3_bucket" "teste" {
  bucket = "nathan-cloudsec-839221"

  tags = {
    Name = "TerraformLab"
  }
}
resource "aws_vpc" "main-vpc" {
  cidr_block = "10.0.0.0/16"

  tags = {
    Name = "VPC"
  }
}

resource "aws_internet_gateway" "main_igw" {
  vpc_id = aws_vpc.main-vpc.id

  tags = {
    Name= "main_igw"
  }
}

resource "aws_subnet" "subnet1" {
  vpc_id     = aws_vpc.main-vpc.id
  cidr_block = "10.0.1.0/24"

  tags = {
    Name = "SUBNET1"
  }

}


resource "aws_subnet" "subnet2" {
  vpc_id     = aws_vpc.main-vpc.id
  cidr_block = "10.0.2.0/24"

  tags = {
    Name = "SUBNET2"
  }

}


resource "aws_subnet" "subnet3" {
  vpc_id     = aws_vpc.main-vpc.id
  cidr_block = "10.0.3.0/24"

  tags = {
    Name = "SUBNET3"
  }

}

resource "aws_route_table" "route_table" {
vpc_id = aws_vpc.main-vpc.id

route {
  cidr_block= "0.0.0.0/0"
  gateway_id = aws_internet_gateway.main_igw.id
}
tags = {
  Name= "route_table"
}
}

resource "aws_route_table_association" "main" {
  subnet_id = aws_subnet.subnet1.id
  route_table_id = aws_route_table.route_table.id
  
}

resource "aws_security_group" "allow_tls" {
  name = "allow_tls"
  description = "Permitir tls traffic"
  vpc_id = aws_vpc.main-vpc.id

  tags = {
    Name = "allow_tls"
  }
}
resource "aws_vpc_security_group_egress_rule" "allow_ipv4_traffic" {
  security_group_id = aws_security_group.allow_tls.id
  cidr_ipv4 = "0.0.0.0/0"
  ip_protocol = "-1" #-1, todos os protocols
}
resource "aws_vpc_security_group_ingress_rule" "allow_https" {
  security_group_id = aws_security_group.allow_tls.id
  cidr_ipv4 = "0.0.0.0/0"
  from_port= 443
  ip_protocol= "tcp"
  to_port= 443
}
resource "aws_vpc_security_group_ingress_rule" "allow_http" {
  security_group_id = aws_security_group.allow_tls.id
  cidr_ipv4 = "0.0.0.0/0"
  from_port= 80
  ip_protocol= "tcp"
  to_port= 80
}
resource "aws_vpc_security_group_ingress_rule" "ssh_https" {
  security_group_id = aws_security_group.allow_tls.id
  cidr_ipv4 = var.my_ip
  from_port= 22
  ip_protocol= "tcp"
  to_port= 22
}
data "aws_ami" "ubuntu" {
most_recent = true
filter {
    name   = "name"
    values = ["ubuntu/images/hvm-ssd/ubuntu-jammy-22.04-amd64-server-*"]
  }
filter {
    name   = "virtualization-type"
    values = ["hvm"]
}
owners = ["099720109477"]
}

resource "aws_instance" "public_ec2" {
  ami = data.aws_ami.ubuntu.id
  instance_type = "t2.micro"
  subnet_id = aws_subnet.subnet1.id #subnet publica
  vpc_security_group_ids = [aws_security_group.allow_tls.id]
  associate_public_ip_address = true
  tags = {
    Name = "ec2"
  }
}
